Added logging (spdlog)
TODO:
 - Write own logger system instead

--- a/Djinn/Djinn.vcxproj.filters
+++ b/Djinn/Djinn.vcxproj.filters
@@ -27,9 +27,18 @@
     <ClInclude Include="src\Djinn\EntryPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Djinn\GitTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Djinn\Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Djinn\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Djinn\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
