--- a/Djinn/Djinn.vcxproj.filters
+++ b/Djinn/Djinn.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Djinn">
       <UniqueIdentifier>{D86F090D-4484-31BE-0D06-D51D79D92DEF}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Djinn\Events">
+      <UniqueIdentifier>{BCD83797-A83B-C73B-51C1-FFF13D0393BE}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Djinn.h" />
@@ -16,9 +19,22 @@
     <ClInclude Include="src\Djinn\EntryPoint.h">
       <Filter>Djinn</Filter>
     </ClInclude>
+    <ClInclude Include="src\Djinn\Events\ApplicationEvent.h">
+      <Filter>Djinn\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Djinn\Events\Event.h">
+      <Filter>Djinn\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Djinn\Events\KeyEvent.h">
+      <Filter>Djinn\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Djinn\Events\MouseEvent.h">
+      <Filter>Djinn\Events</Filter>
+    </ClInclude>
     <ClInclude Include="src\Djinn\Log.h">
       <Filter>Djinn</Filter>
     </ClInclude>
+    <ClInclude Include="src\dngpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Djinn\Application.cpp">
@@ -27,5 +43,6 @@
     <ClCompile Include="src\Djinn\Log.cpp">
       <Filter>Djinn</Filter>
     </ClCompile>
+    <ClCompile Include="src\dngpch.cpp" />
   </ItemGroup>
 </Project>
