Integrated Event system, Added Layer/Layerstack
TODO:
 - Learn, understand and read up on event system
 - Learn, understand and read up on layers

--- a/Djinn/Djinn.vcxproj.filters
+++ b/Djinn/Djinn.vcxproj.filters
@@ -7,6 +7,12 @@
     <Filter Include="Djinn\Events">
       <UniqueIdentifier>{BCD83797-A83B-C73B-51C1-FFF13D0393BE}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Djinn.h" />
@@ -31,23 +37,39 @@
     <ClInclude Include="src\Djinn\Events\MouseEvent.h">
       <Filter>Djinn\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Djinn\Layer.h">
+      <Filter>Djinn</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Djinn\LayerStack.h">
+      <Filter>Djinn</Filter>
+    </ClInclude>
     <ClInclude Include="src\Djinn\Log.h">
       <Filter>Djinn</Filter>
     </ClInclude>
     <ClInclude Include="src\Djinn\Window.h">
       <Filter>Djinn</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\dngpch.h" />
-    <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Djinn\Application.cpp">
       <Filter>Djinn</Filter>
     </ClCompile>
+    <ClCompile Include="src\Djinn\Layer.cpp">
+      <Filter>Djinn</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Djinn\LayerStack.cpp">
+      <Filter>Djinn</Filter>
+    </ClCompile>
     <ClCompile Include="src\Djinn\Log.cpp">
       <Filter>Djinn</Filter>
     </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\dngpch.cpp" />
-    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
   </ItemGroup>
 </Project>
