--- a/Djinn/Djinn.vcxproj.filters
+++ b/Djinn/Djinn.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="Djinn\Events">
       <UniqueIdentifier>{BCD83797-A83B-C73B-51C1-FFF13D0393BE}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Djinn\imgui">
+      <UniqueIdentifier>{42FF8FD8-AEB4-08CE-37A9-02A5A35DFFD1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -49,6 +55,12 @@
     <ClInclude Include="src\Djinn\Window.h">
       <Filter>Djinn</Filter>
     </ClInclude>
+    <ClInclude Include="src\Djinn\imgui\ImGuiLayer.h">
+      <Filter>Djinn\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -56,6 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Djinn\Application.cpp">
+      <Filter>Djinn</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Djinn\Input.cpp">
       <Filter>Djinn</Filter>
     </ClCompile>
     <ClCompile Include="src\Djinn\Layer.cpp">
@@ -66,6 +81,12 @@
     </ClCompile>
     <ClCompile Include="src\Djinn\Log.cpp">
       <Filter>Djinn</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Djinn\imgui\ImGuiLayer.cpp">
+      <Filter>Djinn\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
